# giar_ina_dev

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  pyproject.toml  requierements.txt  requirements.txt
.github/: path-filter.yml
.github/workflows/: check_path.yml
Datasets/: READ.md
Datasets/Augmentation/: complete_cell_detection.py  data_augmentation.py  dataset_balacing.py  image_cutting.py  segmentation_labels.py
Datasets/Augmentation/nucleai_segmentation/: .env  (+3 more)
datasets/: .gitignore  full_fov.dvc
experiments/allium-cepa-dataset-unlabeled/: cell_area_analysis.py  cell_segmentation.py  crop_cells.py  dvc.yaml  params.yaml
models/: .gitignore  SAM.dvc
notebooks/: cell_segmentation_coco.ipynb  cell_segmentation_test.ipynb  clasiffy_df.ipynb  data_tests.ipynb  detection_test.ipynb
notebooks/dataset_generation/: cell_segmentation.ipynb  classification_dataset.ipynb  crop_cell_segmentation.ipynb  data_augmentation.ipynb  detection_dataset.ipynb
notebooks/result_analysis/: Resultados_roboflow.ipynb  Resultados_seccion.ipynb  cell_area_analysis.ipynb  clasiffy_df.ipynb  ina_section_performace.ipynb  model_comparisson.ipynb  onion_cell_merged_section_performance.ipynb  results_comparison.ipynb
notebooks/train/: AE_SSIM+MAE_Bparams.ipynb  AE_SSIM+MAE_GSearch.ipynb  Supervised.ipynb  autoencoder_ssim_mae_bparams_.ipynb  autoencoder_ssim_mae_rsearch_.ipynb  autoencoders.ipynb  binary_classifier.ipynb  clustering.ipynb  clustering_aglomerative.ipynb  encoder.ipynb  supervised.ipynb  supervised_encoder_ssim_mae.ipynb  vae.ipynb
(+4 files in other folders)
