[tool.ruff]
include = ["packages/python/**/*.py"]
[project]
name = "giar-ina-dev"
version = "0.1.0"
description = "Allium cepa cell segmentation and classification"
authors = [
    {name = "Ramiro",email = "rawthil@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "keras (>=3.10.0,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (==2.1.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pycocotools (>=2.0.8,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "dvc (>=3.59.2,<4.0.0)",
    "segment-anything (>=1.0,<2.0)",
    "supervision (>=0.25.1,<0.26.0)",
    "dvclive[image] (>=3.48.2,<4.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
